# mintd

./: client.py  cmd.cpp  main.cpp  makefile  readme.md  util.cpp
include/: cmd.hpp  common_include.hpp  types.hpp  util.hpp
src/: cmd.cpp  main.cpp  meson.build  util.cpp
src/include/: cmd.hpp  global.hpp  types.hpp  util.hpp
